<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataAcquisitionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2b3036"
        android:paddingTop="60dp">

        <ScrollView
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="168dp"
                    android:layout_height="94dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corners"
                    android:elevation="20dp"
                    android:onClick="openDialog"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:text="@string/saveButton"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/discardButton"
                    android:layout_width="168dp"
                    android:layout_height="94dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_corners"
                    android:onClick="discardActivity"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:text="@string/discardButton"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/recordButton"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="18dp"
                    android:elevation="20dp"
                    android:gravity="center"
                    android:src="@drawable/record"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/countdownText"
                    android:layout_width="300dp"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:text="@string/countdownText"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dynamicAccelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamicAccelTitle"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/dynamicAccelChart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dynamicGryoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamicGyroTitle"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/dynamicGyroChart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/livePlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/droid_sans"
                    android:text="@string/livePlot"
                    android:textColor="@android:color/white"
                    android:textSize="38sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/staticPlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/droid_sans"
                    android:text="@string/staticPlot"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view2" />

                <TextView
                    android:id="@+id/staticAccellTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/staticAccelTitle"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/staticAccelChart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/staticGryoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/staticGyroTitle"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/staticGyroChart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="240dp"
                    android:background="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dynamicGyroChart" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/staticAccelChart"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticPlot" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/dynamicAccelChart"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/livePlot" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/dynamicGyroChart"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dynamicAccelChart" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/staticGyroChart"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticAccelChart" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        app:theme="@style/DrawerStyle"
        android:id="@+id/navigation_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="55dp"
        android:background="@android:color/white"
        app:headerLayout="@layout/header"
        app:insetForeground="@null"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"
        app:menu="@menu/drawer_menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>