<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2b3036">

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_button"
            android:fontFamily="@font/droid_sans_bold"
            android:padding="20dp"
            android:text="@string/stopButton"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageView
            android:id="@+id/predictionIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="145dp"
            android:contentDescription="@string/predictionIcon"
            android:background="@drawable/rounded_corners_pred0"
            android:focusableInTouchMode="false"
            android:scrollbarThumbHorizontal="@android:color/transparent"
            android:scrollbarThumbVertical="@android:color/transparent"
            android:scrollbarTrackHorizontal="@android:color/transparent"
            android:scrollbarTrackVertical="@android:color/transparent"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/predictionText">

            <ImageView
                android:id="@+id/prevAct1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/rounded_corners_pred3"
                android:contentDescription="@string/predictionIcon"
                android:scrollbarThumbHorizontal="@android:color/transparent"
                android:scrollbarThumbVertical="@android:color/transparent"
                android:scrollbarTrackHorizontal="@android:color/transparent"
                android:scrollbarTrackVertical="@android:color/transparent"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.842"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@android:color/transparent" />

            <ImageView
                android:id="@+id/prevAct2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/rounded_corners_pred2"
                android:contentDescription="@string/predictionIcon"
                android:scrollbarThumbHorizontal="@android:color/transparent"
                android:scrollbarThumbVertical="@android:color/transparent"
                android:scrollbarTrackHorizontal="@android:color/transparent"
                android:scrollbarTrackVertical="@android:color/transparent"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@android:color/transparent" />

            <ImageView
                android:id="@+id/prevAct3"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/rounded_corners_pred1"
                android:contentDescription="@string/predictionIcon"
                android:scrollbarThumbHorizontal="@android:color/transparent"
                android:scrollbarThumbVertical="@android:color/transparent"
                android:scrollbarTrackHorizontal="@android:color/transparent"
                android:scrollbarTrackVertical="@android:color/transparent"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.842"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@android:color/transparent" />
        </LinearLayout>

        <TextView
            android:id="@+id/predictionText"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/droid_sans_bold"
            android:shadowColor="#000000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/prediction"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/predictionIcon" />

        <com.varunest.sparkbutton.SparkButton
            android:id="@+id/sparkButton"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sparkbutton_activeImage="@drawable/brain"
            app:sparkbutton_animationSpeed="0.8"
            app:sparkbutton_iconSize="150dp"
            app:sparkbutton_primaryColor="@color/myBlue"
            app:sparkbutton_secondaryColor="@color/myGreen" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        app:theme="@style/DrawerStyle"
        android:id="@+id/navigation_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="55dp"
        android:background="@android:color/white"
        app:headerLayout="@layout/header"
        app:insetForeground="@null"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"
        app:menu="@menu/drawer_menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>

